--- a/app/assets/stylesheets/components/_book.scss
+++ b/app/assets/stylesheets/components/_book.scss
@@ -52,9 +52,8 @@
     font-family: Instrument, Times, serif;
     font-size: 20cqw;
     line-height: 1;
-    flex-shrink: 1;
-    display: inline-block;
     width: 100%;
+    -webkit-hyphens: auto;
     hyphens: auto;
   }
 }
