--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,4 @@
-<!-- Random Color -->
-<% random_colour = ["bg_col_1", "bg_col_2", "bg_col_3", "bg_col_4"].sample %>
 <!-- Footer -->
-<div class="horizontal_container <%= random_colour %>" >
-  Footer To Do (Not on every page)
+<div class="horizontal_container footer" >
+  <%= render "shared/book_is_a_book" %>
 </div>
