--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,6 @@
 .navbar {
+  background-color: white;
+  // border-bottom: 1px solid lightgray;
   box-sizing: border-box;
   text-transform: uppercase;
   display: flex;
